php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #50732 exec() adds single byte twice to $output array
Submitted: 2010-01-12 19:29 UTC Modified: 2010-01-13 13:47 UTC
Votes:3
Avg. Score:5.0 ± 0.0
Reproduced:3 of 3 (100.0%)
Same Version:2 (66.7%)
Same OS:2 (66.7%)
From: scope at planetavent dot de Assigned: iliaa (profile)
Status: Closed Package: Program Execution
PHP Version: 5.*, 6 OS: *
Private report: No CVE-ID: None
 [2010-01-12 19:29 UTC] scope at planetavent dot de
Description:
------------
If exec is used to start a command that outputs only a single byte, and if the $output array is used, the byte is added twice to the output array.

Tested with php 5.3.1 in cli mode on Windows 2003 Server and Ubuntu 9.10 Server.

This behaviour was introduced with bugfix to #49847:

From exec.c:125
while (php_stream_get_line(stream, b, EXEC_INPUT_BUF, &bufl)) {
...
if (b[bufl - 1] != '\n' && !php_stream_eof(stream)) {
...
continue;

If only a single byte is read, php_stream_eof(stream) returns true, thus no second loop will take place.

After line 149:
while (l-- && isspace(((unsigned char *)buf)[l]));

buflen is 1 and l is 0, therefor

line 160:
if ((type == 2 && bufl && !l) || type != 2) {

yields true and the buffer is added to the output array, again.

Reproduce code:
---------------
<?php
$command = "echo x";
exec( $command, $output );
print_r( $output );

Expected result:
----------------
Array
(
    [0] => x
)

Actual result:
--------------
Array
(
    [0] => x
    [1] => x
)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-01-12 22:00 UTC] scope at planetavent dot de
Of course, this applies as well to output that just ends with a newline followed by a single byte.

Example:

#!/bin/sh
echo "Hello\nWorl\nd"

results in:

Array
(
    [0] => Hello
    [1] => Worl
    [2] => d
    [3] => d
)
 [2010-01-13 12:10 UTC] jani@php.net
Ilia, fix the fix please? (all branches of course)
 [2010-01-13 13:44 UTC] svn@php.net
Automatic comment from SVN on behalf of iliaa
Revision: http://svn.php.net/viewvc/?view=revision&revision=293502
Log: Fixed bug #50732 (exec() adds single byte twice to $output array).
 [2010-01-13 13:47 UTC] iliaa@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2010-02-03 18:11 UTC] svn@php.net
Automatic comment from SVN on behalf of pajoye
Revision: http://svn.php.net/viewvc/?view=revision&revision=294429
Log: - merge: Fixed bug #50732 (exec() adds single byte twice to  array).
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC