Fixed bug #50732 (exec() adds single byte twice to $output array).